Made corrections to translation.

--- a/01_agama/samyukta/02/SA2_123.md
+++ b/01_agama/samyukta/02/SA2_123.md
@@ -14,13 +14,13 @@ next: SA2_124.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
-2\. There was then a monk named Samṛddhi who went to the Buddha, bowed his head at the Buddha’s feet, and withdrew to sit at one side. He said to the Buddha, “Bhagavān, there’s what’s called ‘the world.’ What’s called ‘the world’?”
+2\. There was then a monk named Samṛddhi who went to the Buddha, bowed his head at the Buddha’s feet, and withdrew to sit at one side. He said to the Buddha, “Bhagavān, there’s what’s called ‘the world.’ What is it that’s called ‘the world’?”
 {:#p2}
 
-3\. [56b] The Buddha told Samṛddhi, “It refers to the eye, form, visual consciousness, visual contact, feelings that dependently arise from visual contact, and inner experiences whether painful, pleasant, or neither painful nor pleasant. It’s the ear … nose … tongue … body … mind, notions, cognitive consciousness, cognitive contact, and the dependently originated feelings that arise from cognitive contact, feelings that dependently arise from cognitive contact, and inner experiences whether painful, pleasant, or neither painful nor pleasant. This is called ‘the world.’ Why is that? The six sense fields form, and then contact forms … The whole mass of suffering forms.
+3\. [56b] The Buddha told Samṛddhi, “It refers to the eye, form, visual consciousness, visual contact, feelings that dependently arise from visual contact, and inner experiences that are painful, pleasant, or neither painful nor pleasant. It refers to the ear … nose … tongue … body … mind, notions, cognitive consciousness, cognitive contact, and feelings that dependently arise from cognitive contact, and inner experiences that are painful, pleasant, or neither painful nor pleasant. This is called ‘the world.’ Why is that? The six sense fields form, and then contact forms … The whole mass of suffering forms.[\[2\]](#n2){:#ref2}
 {:#p3}
 
-4\. “Samṛddhi, suppose there’s no eye, no form, no visual consciousness, no visual contact, no feelings that dependently arise from visual contact, and no inner experiences whether painful, pleasant, or neither painful nor pleasant. There’s no ear … nose … tongue … mind, notions, cognitive consciousness, cognitive contact, or feelings that dependently arise from cognitive contact, inner experiences whether painful, pleasant, or neither painful nor pleasant. Then, there’s no world, nor what’s supposed to be the world. Why is that? When the six sense fields cease, then contact ceases … The whole mass of suffering ceases.”
+4\. “Samṛddhi, suppose there’s no eye, no form, no visual consciousness, no visual contact, no feelings that dependently arise from visual contact, and no inner experiences that are painful, pleasant, or neither painful nor pleasant. There’s no ear … nose … tongue … mind, notions, cognitive consciousness, cognitive contact, feelings that dependently arise from cognitive contact, or inner experiences that are painful, pleasant, or neither painful nor pleasant. Then, there’s no world, nor what’s supposed to be the world. Why is that? When the six sense fields cease, then contact ceases … The whole mass of suffering ceases.”
 {:#p4}
 
 5\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
@@ -29,12 +29,12 @@ next: SA2_124.html
 ### Notes
 
 1. {:#n1} This sūtra is parallel to [SN 35.68](https://suttacentral.net/sn35.68){:target="_blank"}. [\[back\]](#ref1)
-
+2. {:#n2} The full passage would presumably include the entire chain of dependent origination. Feeling, craving, clinging, existence, birth, old age, illness, death, grief, sorrow, vexation, and pain have been omitted. [\[back\]](#ref1)
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 13 April 2021
+Last Revised: 6 February 2022
 {: .revised}
 
 ---
