--- a/01_agama/samyukta/02/SA2_125.md
+++ b/01_agama/samyukta/02/SA2_125.md
@@ -14,13 +14,13 @@ next: SA2_126.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
-2\. There was then a monk named Samṛddhi who went to the Buddha, bowed his head at the Buddha’s feet, and withdrew to sit at one side. He said to the Buddha, “Bhagavān, there’s what’s called ‘Māra.’ What is called ‘Māra’?”
+2\. There was then a monk named Samṛddhi who went to the Buddha, bowed his head at the Buddha’s feet, and withdrew to sit at one side. He said to the Buddha, “Bhagavān, there’s what’s called ‘Māra.’ What is it that’s called ‘Māra’?”
 {:#p2}
 
-3\. [56b] The Buddha told Samṛddhi, “It refers to the eye, form, visual consciousness, visual contact, feelings that dependently arise from visual contact, and inner experiences whether painful, pleasant, or neither painful nor pleasant. It’s the ear … nose … tongue … body … mind, notions, cognitive consciousness, cognitive contact, and the dependently originated feelings that arise from cognitive contact, feelings that dependently arise from cognitive contact, and inner experiences whether painful, pleasant, or neither painful nor pleasant. This is called ‘Māra.’ Why is that? The six sense fields form, and then contact forms … The whole mass of suffering forms.
+3\. [56b] The Buddha told Samṛddhi, “It refers to the eye, form, visual consciousness, visual contact, feelings that dependently arise from visual contact, and inner experiences that are painful, pleasant, or neither painful nor pleasant. It refers to the ear … nose … tongue … body … mind, notions, cognitive consciousness, cognitive contact, and feelings that dependently arise from cognitive contact, and inner experiences that are painful, pleasant, or neither painful nor pleasant. This is called ‘Māra.’ Why is that? The six sense fields form, and then contact forms … The whole mass of suffering forms.
 {:#p3}
 
-4\. “Samṛddhi, suppose there’s no eye, no form, no visual consciousness, no visual contact, no feelings that dependently arise from visual contact, and no inner experiences whether painful, pleasant, or neither painful nor pleasant. There’s no ear … nose … tongue … mind, notions, cognitive consciousness, cognitive contact, or feelings that dependently arise from cognitive contact, inner experiences whether painful, pleasant, or neither painful nor pleasant. Then, there’s no Māra, nor what’s supposed to be Māra. Why is that? When the six sense fields cease, then contact ceases … The whole mass of suffering ceases.”
+4\. “Samṛddhi, suppose there’s no eye, no form, no visual consciousness, no visual contact, no feelings that dependently arise from visual contact, and no inner experiences that are painful, pleasant, or neither painful nor pleasant. There’s no ear … nose … tongue … mind, notions, cognitive consciousness, cognitive contact, feelings that dependently arise from cognitive contact, or inner experiences that are painful, pleasant, or neither painful nor pleasant. Then, there’s no Māra, nor what’s supposed to be Māra. Why is that? When the six sense fields cease, then contact ceases … The whole mass of suffering ceases.”
 {:#p4}
 
 5\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
@@ -34,7 +34,7 @@ next: SA2_126.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 13 April 2021
+Last Revised: 6 February 2022
 {: .revised}
 
 ---
